new dataviewer test commit[C

--- a/sample-project-earthquakes/index.html
+++ b/sample-project-earthquakes/index.html
@@ -9,7 +9,7 @@
 /static/09bb5b09f00a3051fa9ad7e5d42a0a0a/03b69/earthquakes_globe.jpg 700w,
 /static/09bb5b09f00a3051fa9ad7e5d42a0a0a/20ccc/earthquakes_globe.jpg 1050w,
 /static/09bb5b09f00a3051fa9ad7e5d42a0a0a/d04c5/earthquakes_globe.jpg 1120w" src="/static/09bb5b09f00a3051fa9ad7e5d42a0a0a/d04c5/earthquakes_globe.jpg" alt="Earthquakes around the globe - Featured image" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/></picture></noscript></div></header><div class="blog-post-content"><h2><a href="https://jaafreitas.github.io/scratch-dataviewer/?project_url=/scratch/EarthquakesAroundGlobe.sb3">Open the project</a></h2>
-<p>Dataset includes</p>
+<p>Dataset includes:</p>
 <ul>
 <li>Magnitude</li>
 <li>Depth</li>
@@ -17,11 +17,18 @@
 <li>Longitude</li>
 <li>Day/Month/Year</li>
 </ul>
-<p>For all the earthquakes with magnitude 6 or above that occurred in the last 100 years</p>
+<p>Filters: </p>
+<ul>
+<li>Magnitude > 6 </li>
+<li>From 1920 - 2020</li>
+</ul>
 <p><img src=""></p>
-<p>Dataset:</p>
-<p>Sources: </p>
+<p>Dataset:
+[Under construction]</p>
+<p>Sources:
+[Under construction]</p>
 <h3>Related projects</h3>
+<p>[Under construction]</p>
 <ul>
 <li>Earthquakes around the globe</li>
 <li>Depth </li>
